[gd_scene load_steps=37 format=3 uid="uid://dw8dm4b52y11j"]

[ext_resource type="Script" uid="uid://cdmbwtgb46op3" path="res://special_scenes/combat_UI/session_points/StarIcon.gd" id="1_3wti5"]
[ext_resource type="Texture2D" uid="uid://ddrhl0u5s0p6n" path="res://assets/icon/star_full06.png" id="2_3orll"]
[ext_resource type="Texture2D" uid="uid://du0cbkpajkt2d" path="res://assets/icon/star_empty.png" id="3_bu6wq"]
[ext_resource type="Texture2D" uid="uid://gp70x26ysfca" path="res://assets/icon/star_full.png" id="4_eow3t"]
[ext_resource type="Texture2D" uid="uid://7bfr5g5yp0l2" path="res://assets/icon/star_empty00.png" id="5_3evab"]
[ext_resource type="Texture2D" uid="uid://ddlabrtpawcoo" path="res://assets/icon/star_empty01.png" id="6_rvp4e"]
[ext_resource type="Texture2D" uid="uid://v0j17gat5aoa" path="res://assets/icon/star_empty02.png" id="7_ptdnq"]
[ext_resource type="Texture2D" uid="uid://bdpcxo3288pgq" path="res://assets/icon/star_empty03.png" id="8_104bq"]
[ext_resource type="Texture2D" uid="uid://dcxa508rbhyh8" path="res://assets/icon/star_empty04.png" id="9_ah0lt"]
[ext_resource type="Texture2D" uid="uid://cpn15f7b3axgw" path="res://assets/icon/star_empty05.png" id="10_hex5e"]
[ext_resource type="Texture2D" uid="uid://ce6em0u5cxky0" path="res://assets/icon/star_empty06.png" id="11_eirbl"]
[ext_resource type="Texture2D" uid="uid://cyj8pm1kacm7b" path="res://assets/icon/star_empty07.png" id="12_4mfqt"]
[ext_resource type="Texture2D" uid="uid://cvhrbhcmb3ymr" path="res://assets/icon/star_empty08.png" id="13_n20n1"]
[ext_resource type="Texture2D" uid="uid://c0x41xbroredk" path="res://assets/icon/star_empty09.png" id="14_kuueb"]
[ext_resource type="Texture2D" uid="uid://yi7wmvi0swwf" path="res://assets/icon/star_empty10.png" id="15_ss2qd"]
[ext_resource type="Texture2D" uid="uid://by8tpcqod06g0" path="res://assets/icon/star_empty11.png" id="16_5jl1d"]
[ext_resource type="Texture2D" uid="uid://eyqm2diphhd4" path="res://assets/icon/star_full00.png" id="17_5707y"]
[ext_resource type="Texture2D" uid="uid://b2f0egh14agvs" path="res://assets/icon/star_full01.png" id="18_xww7d"]
[ext_resource type="Texture2D" uid="uid://bo7f4sjb5prba" path="res://assets/icon/star_full02.png" id="19_njubr"]
[ext_resource type="Texture2D" uid="uid://dufr08i1rhceg" path="res://assets/icon/star_full03.png" id="20_j3nx6"]
[ext_resource type="Texture2D" uid="uid://ohjrwjm37fy8" path="res://assets/icon/star_full04.png" id="21_chofw"]
[ext_resource type="Texture2D" uid="uid://xon4u2at0y2b" path="res://assets/icon/star_full05.png" id="22_7a4v2"]
[ext_resource type="Texture2D" uid="uid://dv4x4mgsxnjg7" path="res://assets/icon/star_full07.png" id="23_1co4k"]
[ext_resource type="Texture2D" uid="uid://da1fu3n1xyna" path="res://assets/icon/star_full08.png" id="24_kesf8"]
[ext_resource type="Texture2D" uid="uid://bylnf3fbwuxfy" path="res://assets/icon/star_full09.png" id="25_tbuuc"]
[ext_resource type="Texture2D" uid="uid://0mvn3tivbmrh" path="res://assets/icon/star_full10.png" id="26_f8xdp"]
[ext_resource type="Texture2D" uid="uid://bounp6dm6pj6x" path="res://assets/icon/star_full11.png" id="27_4oww0"]
[ext_resource type="FontFile" uid="uid://51vlffimyv6j" path="res://assets/fonts/bungee/Bungee-Regular.otf" id="28_hbofm"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="29_pfvj1"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bu6wq")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_eow3t")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_3evab")
}, {
"duration": 1.0,
"texture": ExtResource("5_3evab")
}, {
"duration": 1.0,
"texture": ExtResource("6_rvp4e")
}, {
"duration": 1.0,
"texture": ExtResource("7_ptdnq")
}, {
"duration": 1.0,
"texture": ExtResource("8_104bq")
}, {
"duration": 1.0,
"texture": ExtResource("9_ah0lt")
}, {
"duration": 1.0,
"texture": ExtResource("10_hex5e")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("11_eirbl")
}, {
"duration": 1.0,
"texture": ExtResource("12_4mfqt")
}, {
"duration": 1.0,
"texture": ExtResource("13_n20n1")
}, {
"duration": 1.0,
"texture": ExtResource("14_kuueb")
}, {
"duration": 1.0,
"texture": ExtResource("15_ss2qd")
}, {
"duration": 1.0,
"texture": ExtResource("16_5jl1d")
}],
"loop": false,
"name": &"outline",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("18_xww7d")
}, {
"duration": 1.0,
"texture": ExtResource("19_njubr")
}, {
"duration": 1.0,
"texture": ExtResource("20_j3nx6")
}, {
"duration": 1.0,
"texture": ExtResource("21_chofw")
}, {
"duration": 1.0,
"texture": ExtResource("22_7a4v2")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("2_3orll")
}, {
"duration": 1.0,
"texture": ExtResource("23_1co4k")
}, {
"duration": 1.0,
"texture": ExtResource("24_kesf8")
}, {
"duration": 1.0,
"texture": ExtResource("25_tbuuc")
}, {
"duration": 1.0,
"texture": ExtResource("26_f8xdp")
}, {
"duration": 1.0,
"texture": ExtResource("27_4oww0")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}, {
"duration": 1.0,
"texture": ExtResource("17_5707y")
}],
"loop": true,
"name": &"shine",
"speed": 60.0
}]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("28_hbofm"), ExtResource("28_hbofm")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("29_pfvj1"), ExtResource("29_pfvj1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0

[sub_resource type="Animation" id="2"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 2),
"transitions": PackedFloat32Array(-2, -2, -2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.2, 2.2), Vector2(2.2, 2.2), Vector2(1.3, 1.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["shine"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fov38"]
_data = {
&"won": SubResource("2")
}

[sub_resource type="Animation" id="3"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [5.0, -5.0, 5.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_05wgk"]
_data = {
&"float": SubResource("3")
}

[node name="StarIcon" type="Node2D"]
position = Vector2(0, 5)
script = ExtResource("1_3wti5")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.470588)
position = Vector2(0, 20)
texture = ExtResource("2_3orll")

[node name="Wrapper" type="Node2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(1.3, 1.3)

[node name="Sprite2D" type="AnimatedSprite2D" parent="Wrapper"]
unique_name_in_owner = true
modulate = Color(1.25, 1.25, 1.25, 1)
position = Vector2(0, 5)
sprite_frames = SubResource("1")
animation = &"shine"
frame = 1

[node name="P" type="Label" parent="Wrapper"]
visible = false
offset_left = -124.0
offset_top = -27.0
offset_right = 126.0
offset_bottom = 49.0
pivot_offset = Vector2(125, 20)
theme_override_fonts/font = SubResource("5")
text = "P"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Wrapper"]
offset_left = -125.0
offset_top = 35.0
offset_right = 125.0
offset_bottom = 98.0
pivot_offset = Vector2(125, 20)
theme_override_fonts/font = SubResource("4")
horizontal_alignment = 1

[node name="WonAnimationPlayer" type="AnimationPlayer" parent="Wrapper"]
libraries = {
"": SubResource("AnimationLibrary_fov38")
}

[node name="FloatAnimationPlayer" type="AnimationPlayer" parent="Wrapper"]
libraries = {
"": SubResource("AnimationLibrary_05wgk")
}
